[package]
name = "savant-perception-framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Synchronous actor framework for real-time video-analytics pipelines (decode -> infer -> track -> render -> encode), with end-to-end samples."
keywords = ["savant", "video", "actor", "pipeline", "deepstream"]
categories = ["multimedia::video", "asynchronous", "concurrency"]
readme = "README.md"
include = ["src/**/*", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "savant_perception"
path = "src/lib.rs"

[[example]]
name = "cars-demo"
path = "examples/cars_demo/main.rs"
required-features = ["deepstream"]

[[example]]
name = "cars-demo-zmq"
path = "examples/cars_demo/main_zmq.rs"
required-features = ["deepstream"]

[dependencies]
# DeepStream-side dependencies — pulled in only when the
# `deepstream` feature is enabled (default).  Without the feature
# the framework still builds (Layer A core + non-deepstream
# stages), but no NVIDIA SDK / CUDA toolchain is needed at compile
# time.
deepstream_inputs = { workspace = true, optional = true }
deepstream_decoders = { workspace = true, optional = true }
deepstream_nvinfer = { workspace = true, optional = true }
deepstream_nvtracker = { workspace = true, optional = true }
deepstream_encoders = { workspace = true, optional = true }
deepstream_buffers = { workspace = true, optional = true }
nvidia_gpu_utils = { workspace = true, optional = true }
picasso = { workspace = true, optional = true }

savant_core = { workspace = true }
savant_gstreamer = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
crossbeam = { workspace = true }
ctrlc = { workspace = true }
gstreamer = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["deepstream"]
# Activate the DeepStream-dependent stages (Decoder, NvInfer,
# NvTracker, Picasso, Function) and the matching envelope /
# message variants (`PipelineMsg`, `SingleDelivery`,
# `BatchDelivery`, `RemoveSourcePayload`, `UpdateSourceSpecPayload`).
# Requires the NVIDIA DeepStream SDK and CUDA toolchain at build
# time.
deepstream = [
    "dep:deepstream_inputs",
    "dep:deepstream_decoders",
    "dep:deepstream_nvinfer",
    "dep:deepstream_nvtracker",
    "dep:deepstream_encoders",
    "dep:deepstream_buffers",
    "dep:nvidia_gpu_utils",
    "dep:picasso",
]

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
serial_test = { workspace = true }
