[package]
name = "savant_protobuf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
savant_core = { path = "../savant_core" }
uuid = "1.6"
byteorder = "1.5"

[build-dependencies]
prost-build = "0.12"

[lib]
crate-type = ["cdylib", "lib"]