[package]
name = "savant-protobuf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Protobuf schema and generated types for Savant inter-process messaging."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["savant", "protobuf", "grpc", "streaming"]
categories = ["encoding", "api-bindings"]
license.workspace = true
rust-version.workspace = true

[lib]
name = "savant_protobuf"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
