[package]
name = "savant_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
savant_core_py = { workspace = true }
savant_gstreamer_py = { workspace = true, optional = true }
pretty_env_logger = { workspace = true }
pyo3 = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
default = []
gst = ["savant_gstreamer_py"]

[package.metadata.maturin]
python-source = "python"
