[package]
name = "savant_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
savant_core_py = { workspace = true }
pretty_env_logger = { workspace = true }
pyo3 = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
# Default builds produce a CPU-only wheel with no GStreamer/DeepStream dependencies.
default = []
# Enable GStreamer integration (savant_rs.gstreamer, savant_rs.retina_rtsp).
# Requires GStreamer development libraries at build time.
gst = ["savant_core_py/gst"]
# Enable full NVIDIA DeepStream stack (implies gst). Adds savant_rs.deepstream,
# savant_rs.nvinfer, savant_rs.nvtracker, and savant_rs.picasso.
# Requires DeepStream SDK + GPU runtime.
deepstream = ["gst", "savant_core_py/deepstream"]

[package.metadata.maturin]
python-source = "python"
