[package]
name = "savant-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Python wheel entry point for Savant; thin re-exporter of savant-core-py."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["multimedia::video", "api-bindings"]
license.workspace = true
rust-version.workspace = true

[lib]
name = "savant_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
savant_core_py = { workspace = true }
pretty_env_logger = { workspace = true }
pyo3 = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
# Default builds produce a CPU-only wheel with no GStreamer/DeepStream dependencies.
default = []
# Enable GStreamer integration (savant_rs.gstreamer, savant_rs.retina_rtsp).
# Requires GStreamer development libraries at build time.
gst = ["savant_core_py/gst"]
# Enable full NVIDIA DeepStream stack (implies gst). Adds savant_rs.deepstream,
# savant_rs.nvinfer, savant_rs.nvtracker, and savant_rs.picasso.
# Requires DeepStream SDK + GPU runtime.
deepstream = ["gst", "savant_core_py/deepstream"]

[package.metadata.maturin]
python-source = "python"
