[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
dynamic = ['version']
name = "savant_rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 88

[tool.maturin]
python-source = "python"
include = ["*"]
features = ["pyo3/extension-module"]
