[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
dependencies = ["pretty-traceback==2024.1021"]
dynamic = ['version']
name = "savant_rs"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
clientsdk = [
    "python-magic~=0.4.27",
    "requests~=2.32.5",
    "numpy>=1.26",
    "opencv-python~=4.12.0",
]


[tool.pytest.ini_options]
testpaths = ["pytests"]

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 88

[tool.maturin]
python-source = "python"
include = ["*"]
features = ["pyo3/extension-module"]
