[package]
name = "savant_core_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
evalexpr = { workspace = true }
hashbrown = { workspace = true }
geo = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
pyo3 = { workspace = true, features = ["num-bigint"] }
savant_core = { workspace = true }
savant_gstreamer = { workspace = true, optional = true }
gstreamer = { workspace = true, optional = true }
glib = { workspace = true, optional = true }
deepstream_buffers = { workspace = true, optional = true }
deepstream_encoders = { path = "../../savant_deepstream/encoders", optional = true }
nvidia_gpu_utils = { workspace = true, optional = true }
nvinfer = { path = "../../savant_deepstream/nvinfer", optional = true }
nvtracker = { path = "../../savant_deepstream/nvtracker", optional = true }
picasso = { path = "../../savant_deepstream/picasso", optional = true }
skia-safe = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
default = []
gst = ["savant_gstreamer", "gstreamer"]
deepstream = ["gst", "glib", "deepstream_buffers", "deepstream_buffers/skia", "deepstream_encoders", "nvidia_gpu_utils", "nvinfer", "nvtracker", "picasso", "skia-safe", "numpy"]

[build-dependencies]
pyo3-build-config = { workspace = true }
cbindgen = { workspace = true }

