[package]
name = "savant-core-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "PyO3 bindings for savant-core (core types exposed to Python)."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["multimedia::video", "api-bindings"]
license.workspace = true
rust-version.workspace = true

[lib]
name = "savant_core_py"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
evalexpr = { workspace = true }
hashbrown = { workspace = true }
geo = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
pyo3 = { workspace = true, features = ["num-bigint"] }
savant_core = { workspace = true }
savant_gstreamer = { workspace = true, optional = true }
retina_rtsp = { workspace = true, optional = true }
savant_services_common = { workspace = true, optional = true }
gstreamer = { workspace = true, optional = true }
glib = { workspace = true, optional = true }
deepstream_buffers = { workspace = true, optional = true }
deepstream_decoders = { workspace = true, optional = true }
deepstream_encoders = { workspace = true, optional = true }
deepstream_inputs = { workspace = true, optional = true }
nvidia_gpu_utils = { workspace = true, optional = true }
deepstream_nvinfer = { workspace = true, optional = true }
deepstream_nvtracker = { workspace = true, optional = true }
picasso = { workspace = true, optional = true }
skia-safe = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
default = []
gst = ["savant_gstreamer", "gstreamer", "retina_rtsp", "savant_services_common"]
deepstream = [
    "gst",
    "glib",
    "deepstream_buffers",
    "deepstream_buffers/skia",
    "deepstream_decoders",
    "deepstream_encoders",
    "deepstream_inputs",
    "nvidia_gpu_utils",
    "deepstream_nvinfer",
    "deepstream_nvtracker",
    "picasso",
    "skia-safe",
    "numpy",
]

[build-dependencies]
pyo3-build-config = { workspace = true }
cbindgen = { workspace = true }
