[package]
name = "savant-deepstream-buffers"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Safe Rust API for NVIDIA DeepStream NvBufSurface buffer generation"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["multimedia::video", "hardware-support"]
license.workspace = true
rust-version.workspace = true

[lib]
name = "deepstream_buffers"
crate-type = ["rlib"]

[dependencies]
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
glib = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
savant_core = { workspace = true }
savant_gstreamer = { workspace = true }

# Skia rendering (optional)
skia-safe = { workspace = true, optional = true }
gl = { workspace = true, optional = true }

[build-dependencies]
bindgen = { workspace = true }

[features]
default = []
skia = ["dep:skia-safe", "dep:gl"]

[dev-dependencies]
env_logger = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
# Path-only (no `version`) so this dev-dep is stripped from the published
# manifest, avoiding a publish-time cycle with `savant-nvidia-gpu-utils`.
nvidia_gpu_utils = { path = "../nvidia_gpu_utils", package = "savant-nvidia-gpu-utils" }
criterion = { workspace = true }
serial_test = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "non_uniform_batch"
harness = false

[[bench]]
name = "surface_view_mapping"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
