[package]
name = "savant-deepstream-decoders"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GPU-accelerated video decoders and raw GPU uploaders using DeepStream NvBufSurface"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["multimedia::video", "hardware-support"]
license.workspace = true
rust-version.workspace = true

[lib]
name = "deepstream_decoders"

[dependencies]
deepstream_buffers = { workspace = true }
savant_core = { workspace = true }
savant_gstreamer = { workspace = true }
nvidia_gpu_utils = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }
glib = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
cros-codecs = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
cros-codecs = { workspace = true }
deepstream_encoders = { workspace = true }
env_logger = { workspace = true }
serial_test = { workspace = true }
criterion = { workspace = true }
nvidia_gpu_utils = { workspace = true }
savant_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
savant_gstreamer = { workspace = true }

[[bench]]
name = "decoder_bench"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
