[package]
name = "deepstream-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

links = "nvdsgst_meta"

[dependencies]

[build-dependencies]
bindgen = { workspace = true }
