[package]
name = "deepstream"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deepstream-sys = { path = "../deepstream-sys" }
glib = { workspace = true }
gstreamer = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
