[package]
name = "deepstream"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
crossbeam = { workspace = true }
deepstream-sys = { path = "../deepstream-sys" }
deepstream_nvinfer = { path = "../deepstream_nvinfer" }
glib = { workspace = true }
gstreamer = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
cudarc = { version = "0.17", features = ["cuda-12020"] }
criterion = { workspace = true }
env_logger = "0.10"
