[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
dynamic = ['version']
name = "deepstream_encoders"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
module-name = "deepstream_encoders._native"
# Skip auditwheel repair to avoid bundling CUDA, GStreamer, and DeepStream
# shared libraries into the wheel.
auditwheel = "skip"

[tool.pytest.ini_options]
testpaths = ["pytests"]
